--- a/src/app/Component/personal-informations/personal-informations.component.html
+++ b/src/app/Component/personal-informations/personal-informations.component.html
@@ -30,12 +30,12 @@
     <label>Country</label>
     <div class="row">
       <div class="col-md-3">
-        <select style="border-right: none;" (change)= "selectcountry($event.target.value)" class="form-control" aria-label="Default select example">
+        <!-- <select style="border-right: none;" (change)= "selectcountry($event.target.value)" class="form-control" aria-label="Default select example">
       
           <option value="India" selected>In</option>
           <option value="America">Am</option>
           <option value="Europe">Eu</option>
-        </select>
+        </select> -->
       </div>
       <div class="col-md-9" style="margin-left: -28px">
         <select  style="border-left: none; width: 308px;" (change)= "selectcountry($event.target.value)" class="form-control" aria-label="Default select example">
