--- a/src/app/Component/personal-informations/personal-informations.component.html
+++ b/src/app/Component/personal-informations/personal-informations.component.html
@@ -1,94 +1,94 @@
-  <form [formGroup]= "personalForm"  class=" border border-light p-5">
+<form [formGroup]= "personalForm"  class=" border border-light p-5">
 
-      <div class="form-row mb-4">
-          <label>Full Name</label>
-          <div class="col">
-              <input  formControlName="fullName" type="text" id="FormFullName" class="form-control">
-          </div>
+  <div class="form-row mb-4">
+      <label>Full Name</label>
+      <div class="col">
+          <input  formControlName="fullName" type="text" id="FormFullName" class="form-control" required>
       </div>
- <!--Gender-->
- <div class="form-row mb-4">
-    <label>Gender</label>
-    <div>
-        <!-- <label class="btn btn-light active"> -->
-          <!-- <input type="radio" name="options" id="option1"  checked> Male -->
-          <button (click)= "gender('Male')" class="btn focus" type="button"> Male </button>
-          <button (click)= "gender('Female')" class="btn focus" type="button"> Female </button>
-          <button (click)= "gender('Others')" class="btn focus" type="button"> Others </button>
-        <!-- </label> -->
-        <!-- <label class="btn btn-light">
+  </div>
+<!--Gender-->
+<div class="form-row mb-4">
+<label>Gender</label>
+<div>
+    <!-- <label class="btn btn-light active"> -->
+      <!-- <input type="radio" name="options" id="option1"  checked> Male -->
+      <button (click)= "gender('Male')" class="btn focus" type="button"> Male </button>
+      <button (click)= "gender('Female')" class="btn focus" type="button"> Female </button>
+      <button (click)= "gender('Others')" class="btn focus" type="button"> Others </button>
+    <!-- </label> -->
+    <!-- <label class="btn btn-light">
 
-          <input type="radio" name="options" id="option2" > Female -->
-        <!-- </label>
-        <label class="btn btn-light">
-          <input type="radio" name="options" id="option3" > Others
-        </label> -->
-      </div>
-    </div>
+      <input type="radio" name="options" id="option2" > Female -->
+    <!-- </label>
+    <label class="btn btn-light">
+      <input type="radio" name="options" id="option3" > Others
+    </label> -->
+  </div>
+</div>
 <!--Country-->
 <div class="form-row mb-4">
-    <label>Country</label>
-    <div class="row">
-      <div class="col-md-3">
-        <!-- <select style="border-right: none;" (change)= "selectcountry($event.target.value)" class="form-control" aria-label="Default select example">
-      
-          <option value="India" selected>In</option>
-          <option value="America">Am</option>
-          <option value="Europe">Eu</option>
-        </select> -->
-      </div>
-      <div class="col-md-9" style="margin-left: -28px">
-        <select  style="border-left: none; width: 308px;" (change)= "selectcountry($event.target.value)" class="form-control" aria-label="Default select example">
-      
-          <option *ngFor="let count of country" [value]="count.name">{{ count.name }}</option>
-          <!-- <option value="India" selected>India</option>
-          <option value="America">America</option>
-          <option value="Europe">Europe</option> -->
-        </select>
-      </div>
-    </div>
-    
+<label>Country</label>
+<div class="row">
+  <div class="col-md-3">
+    <select style="border-right: none;" (change)= "selectcountry($event.target.value)" class="form-control" aria-label="Default select example" disabled>
+  
+      <option value="India" selected>{{countrySh}}</option>
+      <!-- <option value="America">Am</option>
+      <option value="Europe">Eu</option> -->
+    </select>
+  </div>
+  <div class="col-md-9" style="margin-left: -28px">
+    <select  style="border-left: none; width: 308px;" (change)= "selectcountry($event.target.value)" class="form-control" aria-label="Default select example" >
+  
+      <option *ngFor="let count of country" [value]="count.name">{{ count.name }}</option>
+      <!-- <option value="India" selected>India</option>
+      <option value="America">America</option>
+      <option value="Europe">Europe</option> -->
+    </select>
+  </div>
+</div>
+
 </div>
 
 <!--State-->
 <div class="form-row mb-4">
-  <label>State</label>
-  <select (change)= "selectstate($event.target.value)" class="form-control" aria-label="Default select example">
-  
-    <option value="Tamilnadu" selected>Tamilnadu</option>
-    <option value="Kerla">Kerla</option>
-    <option value="Andhra">Andhra</option>
-  </select>
-    
+<label>State</label>
+<select (change)= "selectstate($event.target.value)" class="form-control" aria-label="Default select example">
+
+<option value="Tamilnadu" selected>Tamilnadu</option>
+<option value="Kerla">Kerla</option>
+<option value="Andhra">Andhra</option>
+</select>
+
 </div>
 
 <!--Phone Number-->
 <div class="form-row mb-4">
-    <label>Phone</label>
-    <div class="row">
-      <div class="col-md-3">
-        <select style="border-right: none;" (change)= "selectstate($event.target.value)" class="form-control" aria-label="Default select example">
-  
-          <!-- <option value="+91" selected>+91</option>
-          <option value="+80">+80</option>
-          <option value="+43">+43</option> -->
-          <option>{{ code }}</option>
-        </select>
-      </div>
-      <div class="col-md-9" style="margin-left: -28px">
-        <input formControlName="phoneNumber" style="border-left: none; width: 308px;" type="number" id="FormPhone" class="form-control">
-      </div>
-    </div>
-    <!-- <div class="col">
-        <input formControlName="phoneNumber" type="number" id="FormPhone" class="form-control">
-    </div> -->
+<label>Phone</label>
+<div class="row">
+  <div class="col-md-3">
+    <select style="border-right: none;" (change)= "selectstate($event.target.value)" class="form-control" aria-label="Default select example">
+
+      <!-- <option value="+91" selected>+91</option>
+      <option value="+80">+80</option>
+      <option value="+43">+43</option> -->
+      <option>{{ code }}</option>
+    </select>
+  </div>
+  <div class="col-md-9" style="margin-left: -28px">
+    <input formControlName="phoneNumber" style="border-left: none; width: 308px;" type="number" id="FormPhone" class="form-control">
+  </div>
+</div>
+<!-- <div class="col">
+    <input formControlName="phoneNumber" type="number" id="FormPhone" class="form-control">
+</div> -->
 </div>
 <!--Next-->
 
 <div class="col-md-12">
-  <button (click)= "next()" type="button" [disabled]="personalForm.invalid" style="width: 100%; background-color:#ff7700; border: none; color: white; padding: 5px;">Next</button>
+<button (click)= "next()" type="button" [disabled]="personalForm.invalid" style="width: 100%; background-color:#ff7700; border: none; color: white; padding: 5px;">Next</button>
 </div>
- 
+
 <!--Login ?-->
 <p class="text-center mt-3">Already have an account?</p>
 <p class="text-center">  <span class="text-danger">Log in </span></p>
